syntax = "proto3";
package DomainServices.CaseService.v1;
option csharp_namespace = "DomainServices.CaseService.Contracts.v1";

import "google/protobuf/empty.proto";
import "SearchCases.proto";
import "CreateCase.proto";
import "Case.proto";
import "LinkOwnerToCase.proto";
import "UpdateCaseData.proto";
import "UpdateCaseState.proto";
import "UpdateCaseCustomer.proto";
import "GetCaseDetail.proto";
import "GetCaseCounts.proto";
import "DeleteCase.proto";
import "GetTaskList.proto";
import "UpdateActiveTasks.proto";
import "UpdateOfferContacts.proto";

service CaseService {
   rpc CreateCase (CreateCaseRequest) returns (CreateCaseResponse);
   
   rpc GetCaseDetail (GetCaseDetailRequest) returns (Case);
   
   rpc SearchCases (SearchCasesRequest) returns (SearchCasesResponse);
   
   rpc LinkOwnerToCase (LinkOwnerToCaseRequest) returns (google.protobuf.Empty);
   
   rpc UpdateCaseData (UpdateCaseDataRequest) returns (google.protobuf.Empty);
   
   rpc UpdateCaseState (UpdateCaseStateRequest) returns (google.protobuf.Empty);
   
   rpc UpdateCaseCustomer (UpdateCaseCustomerRequest) returns (google.protobuf.Empty);

   rpc GetCaseCounts (GetCaseCountsRequest) returns (GetCaseCountsResponse);

   rpc DeleteCase (DeleteCaseRequest) returns (google.protobuf.Empty);

   rpc GetTaskList (GetTaskListRequest) returns (GetTaskListResponse);

   rpc UpdateActiveTasks (UpdateActiveTasksRequest) returns (google.protobuf.Empty);

   rpc UpdateOfferContacts (UpdateOfferContactsRequest) returns (google.protobuf.Empty);
}